testdata/baselines/reference/submodule/conformance/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(6,12): error TS2304: Cannot find name 'T'.


==== templateTagOnConstructorFunctions.js (1 errors) ====
    /**
     * @template U
     * @typedef {(u: U) => U} Id
     */
    /**
     * @param {T} t
               ~
!!! error TS2304: Cannot find name 'T'.
     * @template T
     */
    function Zet(t) {
        /** @type {T} */
        this.u
        this.t = t
    }
    /**
     * @param {T} v
     * @param {Id<T>} id
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
    z.t = 2
    z.u = false
    